WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170080
REGRESSION(
r214195
): zillow.com header video doesn't resume when switching to another tab and back
https://bugs.webkit.org/show_bug.cgi?id=170080
Summary
REGRESSION(r214195): zillow.com header video doesn't resume when switching to...
Andreas Kling
Reported
2017-03-24 15:56:43 PDT
Repro steps: 1. open "zillow.com" in one tab 2. switch to another tab 3. switch back to the zillow tab Notice how the huge video up top doesn't animate anymore. This regressed with
https://trac.webkit.org/changeset/214195/webkit
Attachments
Patch
(2.51 KB, patch)
2017-03-25 16:57 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-03-24 16:02:56 PDT
<
rdar://problem/31252522
>
Chris Dumez
Comment 2
2017-03-25 10:21:12 PDT
We do call play() on the player when the view becomes visible again. Then I see the play / playing / timeupdate events getting fired. I also see rateDidChange() being called with a rate of 1. I do believe the video is actually playing now. However, for some reason, the view stays static and does not display the frames. If anyone has an idea of what could be going on, please let me know.
Chris Dumez
Comment 3
2017-03-25 16:03:38 PDT
(In reply to Chris Dumez from
comment #2
)
> We do call play() on the player when the view becomes visible again. Then I > see the play / playing / timeupdate events getting fired. I also see > rateDidChange() being called with a rate of 1. I do believe the video is > actually playing now. > > However, for some reason, the view stays static and does not display the > frames. > > If anyone has an idea of what could be going on, please let me know.
It looks like we are displaying the poster even though the video is playing again. If I update HTMLVideoElement::shouldDisplayPosterImage() to always return false, then the bug goes away.
Chris Dumez
Comment 4
2017-03-25 16:57:52 PDT
Created
attachment 305408
[details]
Patch
WebKit Commit Bot
Comment 5
2017-03-25 20:52:44 PDT
Comment on
attachment 305408
[details]
Patch Clearing flags on attachment: 305408 Committed
r214407
: <
http://trac.webkit.org/changeset/214407
>
WebKit Commit Bot
Comment 6
2017-03-25 20:52:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug